--- a/CardsPlus/index.html
+++ b/CardsPlus/index.html
@@ -17,29 +17,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
-    <link href="characters.css" rel="stylesheet">
+    <link href="../characters.css" rel="stylesheet">
   </head>
 
   <body>
     <nav class="navBar grey darken-4">
       <div class="">
-        <a href="#" class="site_Logo left"><img src="" alt="DM logo" /></a>
+        <a href="#" class="site_Logo left">
+          <img src="../img/Abyss_Logo.png" alt="">
+        </a>
 
-        <ul class="left">
+        <!--ul class="left">
           <li class="app_Picker"><i class="fa-duotone fa-grid"></i></li>
         </ul>
 
         <ul class="right">
           <li class="notice"><i class="fa-solid fa-triangle-exclamation"></i></li>
-        </ul>
+        </ul-->
       </div>
     </nav>
 
     <div class="container">
-      <div id="GenshinCard" class="glass  cardBG">
+      <div id="GenshinCard" class="glass pageAlign cardBG">
         <div class="card_header row">
           <div class="card_headerImage col l3 dePad left-align">
-            <img src="img/GenshinLogo_BW.png" alt="">
+            <img src="../img/GenshinLogo_BW.png" alt="">
           </div>
 
           <div class="col l6 dePad">
@@ -59,7 +61,7 @@
         </div>
       </div>
 
-      <div class="glass col l4 cardInfo">
+      <div class="glass col l4 cardInfo pageAlign">
         <p class="detail_section">Card Details <button class="applyCardDetails button"><i class="fa-duotone fa-badge-check"></i> APPLY</button></p>
         <div class="fieldSet">
           <span class="fieldLabel">Card Title</span>
@@ -87,25 +89,16 @@
         </div>
 
 
-        <p class="detail_section">Character Information</p>
+        <!--p class="detail_section">Character Information</p>
 
         <div id="CharacterInfo">
           <div class="characterEntry KokomiSelected">
             <span>Kokomi</span>
             <span><input type="text" class="constellation browser-default customTextField" /></span>
           </div>
-        </div>
+        </div-->
 
-        <button id="generateImage" type="button" name="button" data-target="downloadModal" class="modal-trigger button"><i class="fa-duotone fa-file-arrow-down"></i> DOWNLOAD</button>
-
-        <button onclick="downloadimage()" class="clickbtn">Click To Download Image</button>
-      </div>
-    </div>
-
-    <!-- Modal Structure -->
-    <div id="downloadModal" class="modal">
-      <div class="modal-content" id="cardExportImage">
-        <h4>Save image <i class="fa-solid fa-image"></i></h4>
+        <button id="generateImage" type="button" name="button" data-target="downloadModal" class="modal-trigger button" onclick="downloadimage()"> <i class="fa-duotone fa-file-arrow-down"></i> DOWNLOAD</button>
       </div>
     </div>
 
@@ -119,21 +112,21 @@
 
             <div class="creator">
               <a class="btn-floating pulse white"><img class="" src="https://media.discordapp.net/attachments/931472774529167371/955479602619371550/465a93828fe0c618317c03bbe774512f.webp" alt=""></a>
-              <div>0xKiryuu#1090</div>
+              <div>GibiDroidZ#3281</div>
             </div>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Tools</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#"><i class="fa-duotone fa-badge-check"></i> Character Card Generator</a></li>
+              <li><a class="grey-text text-lighten-3" href="#"><i class="fa-duotone fa-badge-check"></i> Character Checklist</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright black">
         <div class="container">
-          © <span class="currentYear"></span> Kiryuu
-          <a class="grey-text text-lighten-4 right" href="https://dragonmainland.io" target="_blank">Dragon Mainland</a>
+          © <span class="currentYear"></span> GibiDroidZ
+          <a class="grey-text text-lighten-4 right" href="https://genshin.hoyoverse.com/en/" target="_blank">Genshin Impact</a>
         </div>
       </div>
     </footer>
@@ -145,7 +138,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
 
-    <script src="charInfo.js"></script>
+    <script src="../charInfo.js"></script>
     <script src="scripts.js"></script>
   </body>
 
