--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
-    <link href="../characters.css" rel="stylesheet">
+    <link href="characters.css" rel="stylesheet">
   </head>
 
   <body>
     <nav class="navBar grey darken-4">
       <div class="">
         <a href="#" class="site_Logo left">
-          <img src="../img/Abyss_Logo.png" alt="">
+          <img src="img/Abyss_Logo.png" alt="">
         </a>
 
         <!--ul class="left">
@@ -41,7 +41,7 @@
       <div id="GenshinCard" class="glass pageAlign cardBG">
         <div class="card_header row">
           <div class="card_headerImage col l3 dePad left-align">
-            <img src="../img/GenshinLogo_BW.png" alt="">
+            <img src="img/GenshinLogo_BW.png" alt="">
           </div>
 
           <div class="col l6 dePad">
@@ -138,7 +138,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
 
-    <script src="../charInfo.js"></script>
+    <script src="charInfo.js"></script>
     <script src="scripts.js"></script>
   </body>
 
