--- a/CheckList/index.html
+++ b/CheckList/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Genshin Impact">
-    <meta name="keywords" content="genshin impact">
+    <meta name="keywords" content="genshin impact, abyss, character checklist, checklist">
 
-    <title>Genshin Impact</title>
+    <title>CheckList</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -18,6 +18,19 @@
 
     <link href="style.css" rel="stylesheet">
     <link href="../characters.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-28FF1WQTPR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-28FF1WQTPR');
+    </script>
   </head>
 
   <body>
@@ -62,7 +75,7 @@
       </div>
 
       <div class="glass col l4 cardInfo pageAlign">
-        <p class="detail_section">Card Details <button class="applyCardDetails button"><i class="fa-duotone fa-badge-check"></i> APPLY</button></p>
+        <p class="detail_section">Card Details <button class="applyCardDetails button"><i class="fa-duotone fa-badge-check white-text"></i> APPLY</button></p>
         <div class="fieldSet">
           <span class="fieldLabel">Card Title</span>
           <span class="fieldText"><input type="text" class="cardTitle browser-default customTextField" value="v2.7 Character Checklist" /></span>
@@ -98,7 +111,7 @@
           </div>
         </div-->
 
-        <button id="generateImage" type="button" name="button" data-target="downloadModal" class="modal-trigger button" onclick="downloadimage()"> <i class="fa-duotone fa-file-arrow-down"></i> DOWNLOAD</button>
+        <button id="generateImage" type="button" name="button" data-target="downloadModal" class="modal-trigger button" onclick="downloadimage()"> <i class="fa-duotone fa-file-arrow-down white-text"></i> DOWNLOAD</button>
       </div>
     </div>
 
