--- a/CheckList/index.html
+++ b/CheckList/index.html
@@ -50,6 +50,12 @@
       </div>
     </nav>
 
+    <p class="marquee">
+      <span>
+        This site does not support mobile yet, Gomennasai (´▽`ʃ♡ƪ)
+      </span>
+    </p>
+
     <div class="container">
       <div id="GenshinCard" class="glass pageAlign cardBG">
         <div class="card_header row">
