--- a/CheckList/index.html
+++ b/CheckList/index.html
@@ -52,26 +52,30 @@
 
     <p class="marquee">
       <span>
-        This site does not support mobile yet, Gomennasai (´▽`ʃ♡ƪ)
+        This site does not fully support mobile yet, Gomennasai (´▽`ʃ♡ƪ)
       </span>
     </p>
 
     <div class="container">
       <div id="GenshinCard" class="glass pageAlign cardBG">
         <div class="card_header row">
-          <div class="card_headerImage col l3 dePad left-align">
+          <div class="card_headerImage col l3 m3 s6 dePad left-align">
             <img src="../img/GenshinLogo_BW.png" alt="">
           </div>
 
-          <div class="col l6 dePad">
+          <div class="col l6 l6 m6 s6 dePad hideInCustom-700">
             <span class="card_title">v2.7 Character Checklist</span>
           </div>
 
-          <div class="col l3 dePad right-align">
+          <div class="card_userDetails col l3 l3 m3 s6 dePad right-align">
             <span class="card_owner">GENSHIN_USER</span><br />
             <span class="card_UID">UID 12345</span><br />
             <span class="card_ARank">AR59</span><br />
             <span class="card_sign">SIGNATURE</span>
+          </div>
+
+          <div class="col l6 l6 m6 s12 dePad card_labelSmall showInCustom-700">
+            <span class="card_title">v2.7 Character Checklist</span>
           </div>
         </div>
 
@@ -80,7 +84,7 @@
         </div>
       </div>
 
-      <div class="glass col l4 cardInfo pageAlign">
+      <div class="glass col l4 m12 s12 cardInfo pageAlign">
         <p class="detail_section">Card Details <button class="applyCardDetails button"><i class="fa-duotone fa-badge-check white-text"></i> APPLY</button></p>
         <div class="fieldSet">
           <span class="fieldLabel">Card Title</span>
