Added Mobile Support

--- a/CheckList/index.html
+++ b/CheckList/index.html
@@ -52,7 +52,7 @@
 
     <p class="marquee">
       <span>
-        This site does not fully support mobile yet, Gomennasai (´▽`ʃ♡ƪ)
+        This site may not fully support all mobiles yet, Gomennasai (´▽`ʃ♡ƪ)
       </span>
     </p>
 
